# deep-pull

backend/: README.md  env.example  package-lock.json  package.json  test-client.js
backend/src/: app.ts  config.ts
backend/src/entity/: Player.ts  PlayerConnection.ts  PlayerSeasonalStats.ts  User.ts  UserStats.ts
backend/src/middleware/: auth.ts
backend/src/routes/: player.ts  user.ts
backend/src/services/: game-manager.ts  pathfinding.ts
backend/src/types/: express.d.ts  game.ts
backend/src/utils/: logger.ts
docs/: frontend_architecture.md  game-ui-overview.md  gladiator-game.md  nfl_gaming_architecture.md  project_structure.txt  visual_style_guide.md
etl/: .gitignore  debug_canonical_id.py  debug_game_type.py  debug_import_seasonal_roster.py  debug_star_players.py  manage_schema.py  mvp_pipeline.py  pyproject.toml  run_etl.py  test_connection.py  validate_data.py
etl/docs/: complete_etl_setup.md  mvp_etl_summary.md  skill-position-pivot.md
frontend/: env.local.example  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  socket.ts  types.ts
frontend/src/components/: Countdown.tsx  GameTimer.tsx
frontend/src/screens/: EndGameScreen.tsx  GameScreen.tsx  HomeScreen.tsx  HowToPlayScreen.tsx  LobbyScreen.tsx  ModeScreen.tsx  ProfileScreen.tsx  QueueScreen.tsx
frontend/src/state/: gameMachine.ts
